Fixes login box being off centred on small screens
Accounted for top offset to keep login container centred. Login container fades in on load.
Tested on a variety of window sizes and appears to be centred on all of them (measured it to make sure).

--- a/core/admin/assets/sass/layouts/login.scss
+++ b/core/admin/assets/sass/layouts/login.scss
@@ -19,15 +19,16 @@
     }
 
     main { 
-        top: 15px; 
+        top: 15px;
         @include breakpoint($mobile) { top: 0; }
     }
 }//.ghost-login
 
 .login-box {
     max-width: 530px;
-    margin: 240px auto; // TODO: Change this to proper vertical centering with JS
+    margin: 0 auto;
     padding: 0;
+    display: none;
 
     @include breakpoint(630px) {
         max-width: 264px;
